<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advance Calculator</string>
    <string name="backspace">⌫</string>
    <string name="Mod">%</string>
    <string name="bmi_cat_1">Very severely underweight</string>
    <string name="bmi_cat_10">Obese Class V (Super Obese)</string>
    <string name="bmi_cat_11">Obese Class VI (Hyper Obese)</string>
    <string name="bmi_cat_2">Severely underweight</string>
    <string name="bmi_cat_3">Underweight</string>
    <string name="bmi_cat_4">Normal (healthy weight)</string>
    <string name="bmi_cat_5">Overweight</string>
    <string name="bmi_cat_6">Obese Class I (Moderately obese)</string>
    <string name="bmi_cat_7">Obese Class II (Severely obese)</string>
    <string name="bmi_cat_8">Obese Class III (Very severely obese)</string>
    <string name="bmi_cat_9">Obese Class IV (Morbidly Obese)</string>
    <string name="bmi_result">BMI: %s</string>
    <string name="clear">Ac</string>
    <string name="closeBracket">)</string>
    <string name="cos">cos</string>
    <string name="cosinv">cos⁻¹</string>
    <string name="cube">x³</string>
    <string name="cuberoot">∛</string>
    <string name="default_unit">@string/metric</string>
    <string name="divide">÷</string>
    <string name="epown">eⁿ</string>
    <string name="factorial">x!</string>
    <string name="height_imperial">Height in inch</string>
    <string name="height_metric">Height in meters</string>
    <string name="hint_emi">EMI</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_interest_total">Total Interest for Loan</string>
    <string name="hint_principal">Principal Amount</string>
    <string name="hint_years">Number of Years</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="imperial">Imperial</string>
    <string name="inverse">1/x</string>
    <string name="log">log</string>
    <string name="metric">Metric</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="naturalLog">ln</string>
    <string name="openBracket">(</string>
    <string name="pi">π</string>
    <string name="posneg">±</string>
    <string name="search_menu_title">Search</string>
    <string name="sin">sin</string>
    <string name="sininv">sin⁻¹</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tan">tan</string>
    <string name="taninv">tan⁻¹</string>
    <string name="tenpow">10ⁿ</string>
    <string name="toast_message">Toast message</string>
    <string name="toggle">SWITCH</string>
    <string name="weight_imperial">Weight in pounds</string>
    <string name="weight_metric">Weight in kilogram</string>
    <string name="xpown">xⁿ</string>
</resources>
