<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f8fb">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:onClick="onClick"
            android:src="@drawable/ic_back"
            app:tint="@color/dark_grey" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/idCard"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:text="BMI Calculator"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/idCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/height_in_m"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/border_stroked_off">

                        <AutoCompleteTextView
                            android:id="@+id/txt_height"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:backgroundTint="@android:color/transparent"
                            android:digits="0123456789.,"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:hint="@string/height_metric"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/weight_in_kg"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@+id/height_in_m"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/border_stroked_off">

                        <AutoCompleteTextView
                            android:id="@+id/txt_weight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:backgroundTint="@android:color/transparent"
                            android:ems="10"
                            android:hint="@string/weight_metric"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_result_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weight_in_kg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txt_result_cat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_result_bmi"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_result_cat"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/btn_metric"
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:background="@drawable/gr_orange"
                            android:buttonTint="@color/white"
                            android:onClick="setSystemOfUnits"
                            android:text="@string/metric"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/btn_imperial"
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="8dp"
                            android:buttonTint="@color/dark_grey"
                            android:onClick="setSystemOfUnits"
                            android:text="@string/imperial"
                            android:textColor="@color/dark_grey"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/btn_metric"
                            app:layout_constraintTop_toTopOf="parent" />
                    </RadioGroup>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
